# energy-profiler

./: README.md  ep.service
firmware/fw-usb-connected-shield-ep-1v2/: CMakeLists.txt
firmware/fw-usb-connected-shield-ep-1v4/: CMakeLists.txt  prj.conf  workspace.code-workspace
firmware/fw-usb-connected-shield-ep-1v4/src/: init.h  main.c
firmware/fw-usb-connected-shield-ep-1v4/src/AD524X/: AD524X.c
firmware/fw-usb-connected-shield-ep-1v4/src/ADS1115/: ADS1115.c  ADS1115.h
firmware/fw-usb-connected-shield-ep-1v4/src/lookup_table/: lookup_table.c  lookup_table.h
firmware/fw-usb-connected-shield-ep-1v4/src/peripherals/: peripherals.c
firmware/logger-nrf52832/: CMakeLists.txt
firmware/logger-nrf52832-v1-2/: CMakeLists.txt  prj.conf
firmware/motherboard-nrf52832-v-1-1/: CMakeLists.txt  prj.conf
firmware/motherboard-nrf52832-v-1-2/: CMakeLists.txt  prj.conf
firmware/motherboard-usb-connected/: prj.conf
hardware/ARCHIVE/: design-1v2.b#4  design-1v2.s#1
hardware/energy-profiler-shield-1vX/: design-1v0.brd  design-1v1.brd  design-1v1.sch  design-1v2.brd  design-1v3.brd  design-1v3.sch
hardware/motherboard-1vX/: design-1v0.sch  design-1v1.sch  design1.brd  design2.brd
publisher-script/: README.md  debug.py  main.py  main_last.py  main_threaded.py
shield-hardware/: design-1v0.sch  design-1v2.sch
shield-hardware/ARCHIVE/: design-1v2.b#1  design-1v2.b#2  design-1v2.b#3  design-1v2.b#5  design-1v2.b#6  design-1v2.brd  design-1v2.s#2
shield-hardware/energy-profiler-gerber-1v0/: design1.GBO  design1.GML  design1.GTL  (+2 more)
subscriber-script/: main.py
(+181 files in other folders)
